Add portfolio section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <ul class="nav navbar-nav text-uppercase" id="nav">
                         <li><a href="#headerSection">Home</a></li>
                         <li><a href="#servicesSection">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#portfolioSection">Portfolio</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
@@ -67,6 +67,76 @@
                         <p>Proin iaculis purus consequat sem cure 
                                 digni ssim. Donec porttitora entum suscipit 
                                 aenean rhoncus posuere odio in tincidunt.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="portfolio container-fluid text-center" id="portfolioSection">
+                <div class="container">
+                    <h1 class="text-uppercase">Our portfolio</h1>
+                    <p>Proin iaculis purus consequat sem cure.</p>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="imageBox" >
+                                <div class="layer">
+                                    <h4 class="text-uppercase">Ebony & Ivory</h4>
+                                </div>
+                                <img src="./images/image2.png" alt=""/>
+                            </div>
+                            <h1>Ebony & Ivory</h1>
+                            <p>Branding</p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="imageBox" >
+                                <div class="layer">
+                                    <h4 class="text-uppercase">Smart Stationary</h4>
+                                </div>
+                                <img src="./images/image1.png" alt=""/>
+                            </div>
+                            <h1>Smart Stationary</h1>
+                            <p>Print Design</p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="imageBox" >
+                                <div class="layer">
+                                    <h4 class="text-uppercase">Clever Poster</h4>
+                                </div>
+                                <img src="./images/image2.png" alt=""/>
+                            </div>
+                            <h1>Clever Poster</h1>
+                            <p>Print Design</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="imageBox" >
+                                <div class="layer">
+                                    <h4 class="text-uppercase">Vinyl Record</h4>
+                                </div>
+                                <img src="./images/image3.png" alt=""/>
+                            </div>
+                            <h1>Vinyl Record</h1>
+                            <p>Product Mock-Up</p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="imageBox" >
+                                <div class="layer">
+                                    <h4 class="text-uppercase">Treehouse Template</h4>
+                                </div>
+                                <img src="./images/image4.png" alt=""/>
+                            </div>
+                            <h1>Treehouse Template</h1>
+                            <p>Web Design</p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="imageBox" >
+                                <div class="layer">
+                                    <h4 class="text-uppercase">Burned Logo</h4>
+                                </div>
+                                <img src="./images/image5.png" alt=""/>
+                            </div>
+                            <h1>Burned Logo</h1>
+                            <p>Branding</p>
+                        </div>
                     </div>
                 </div>
             </section>
