Add about section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a href="#headerSection">Home</a></li>
                         <li><a href="#servicesSection">Services</a></li>
                         <li><a href="#portfolioSection">Portfolio</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="#aboutSection">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
@@ -50,23 +50,17 @@
                     <div class="col-md-4">
                         <i class="fa fa-shopping-basket" aria-hidden="true"></i>
                         <h1>E-commerce</h1>
-                        <p>Proin iaculis purus consequat sem cure 
-                                digni ssim. Donec porttitora entum suscipit 
-                                aenean rhoncus posuere odio in tincidunt.</p>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                     <div class="col-md-4">
                         <i class="fa fa-laptop" aria-hidden="true"></i>
                         <h1>Responsive Web</h1>
-                        <p>Proin iaculis purus consequat sem cure 
-                                digni ssim. Donec porttitora entum suscipit 
-                                aenean rhoncus posuere odio in tincidunt.</p>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                     <div class="col-md-4">
                         <i class="fa fa-lock" aria-hidden="true"></i>
                         <h1>Web Security</h1>
-                        <p>Proin iaculis purus consequat sem cure 
-                                digni ssim. Donec porttitora entum suscipit 
-                                aenean rhoncus posuere odio in tincidunt.</p>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                 </div>
             </section>
@@ -76,7 +70,7 @@
                     <p>Proin iaculis purus consequat sem cure.</p>
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="imageBox" >
+                            <div class="image-box" >
                                 <div class="layer">
                                     <h4 class="text-uppercase">Ebony & Ivory</h4>
                                 </div>
@@ -86,7 +80,7 @@
                             <p>Branding</p>
                         </div>
                         <div class="col-md-4">
-                            <div class="imageBox" >
+                            <div class="image-box" >
                                 <div class="layer">
                                     <h4 class="text-uppercase">Smart Stationary</h4>
                                 </div>
@@ -96,7 +90,7 @@
                             <p>Print Design</p>
                         </div>
                         <div class="col-md-4">
-                            <div class="imageBox" >
+                            <div class="image-box" >
                                 <div class="layer">
                                     <h4 class="text-uppercase">Clever Poster</h4>
                                 </div>
@@ -108,7 +102,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="imageBox" >
+                            <div class="image-box" >
                                 <div class="layer">
                                     <h4 class="text-uppercase">Vinyl Record</h4>
                                 </div>
@@ -118,7 +112,7 @@
                             <p>Product Mock-Up</p>
                         </div>
                         <div class="col-md-4">
-                            <div class="imageBox" >
+                            <div class="image-box" >
                                 <div class="layer">
                                     <h4 class="text-uppercase">Treehouse Template</h4>
                                 </div>
@@ -128,7 +122,7 @@
                             <p>Web Design</p>
                         </div>
                         <div class="col-md-4">
-                            <div class="imageBox" >
+                            <div class="image-box" >
                                 <div class="layer">
                                     <h4 class="text-uppercase">Burned Logo</h4>
                                 </div>
@@ -136,6 +130,81 @@
                             </div>
                             <h1>Burned Logo</h1>
                             <p>Branding</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="about container text-center" id="aboutSection">
+                <h1 class="text-uppercase">About us</h1>
+                <p>Proin iaculis purus consequat sem cure.</p>
+                <div class="row">
+                    <div class="col-md-4 text-right">
+                        <h1 class="text-uppercase">July 2010</h1>
+                        <h1>Our Humble Beginnings</h1>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
+                    </div>
+                    <div class="col-md-4 image-box">
+                        <div class="layer"></div>
+                        <img src="./images/image6.png" alt=""/>
+                    </div>
+                    <div class="col-md-4"></div>
+                </div>
+                <div class="row line-box">
+                    <div class="line"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4 image-box">
+                        <div class="layer"></div>
+                        <img src="./images/image7.png" alt=""/>
+                    </div>
+                    <div class="col-md-4 text-left">
+                        <h1 class="text-uppercase">January 2011</h1>
+                        <h1>Facing Startup Battles</h1>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
+                    </div>
+                </div>
+                <div class="row line-box">
+                    <div class="line"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 text-right">
+                        <h1 class="text-uppercase">December 2012</h1>
+                        <h1>Enter The Dark Days</h1>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni.</p>
+                    </div>
+                    <div class="col-md-4 image-box">
+                        <div class="layer"></div>
+                        <img src="./images/image8.png" alt=""/>
+                    </div>
+                    <div class="col-md-4"></div>
+                </div>
+                <div class="row line-box">
+                    <div class="line"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4 image-box">
+                        <div class="layer"></div>
+                        <img src="./images/image9.png" alt=""/>
+                    </div>
+                    <div class="col-md-4 text-left">
+                        <h1 class="text-uppercase">February 2014</h1>
+                        <h1>Our Triumph</h1>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim.</p>
+                    </div>
+                </div>
+                <div class="row line-box">
+                    <div class="line"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 image-box">
+                        <div class="layer"></div>
+                        <div class="text-uppercase gold-circle">
+                            <h1>Our</h1>
+                            <h1>Story</h1>
+                            <h1>Continues</h1>
+                            <h1>...</h1>
                         </div>
                     </div>
                 </div>
