--- a/index.html
+++ b/index.html
@@ -209,6 +209,38 @@
                     </div>
                 </div>
             </section>
+            <section class="container-fluid team">
+                <div class="container text-center">
+                    <h1 class="text-uppercase">our amazing team</h1>
+                    <p>Proin iaculis purus consequat sem cure.</p>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img src="images/team1.jpeg" alt=""/>
+                            <h1>Kimberly Thompson</h1>
+                            <p>Marketer</p>
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-4">
+                            <img src="images/team2.jpeg" alt=""/>
+                            <h1>Rico Massimo</h1>
+                            <p>Coder</p>
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-4">
+                            <img src="images/team3.jpeg" alt=""/>
+                            <h1>Uku Mason</h1>
+                            <p>Graphic Designer</p>
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                    <p class="text-padding">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt proin iaculis.</p>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </body>
